Update Portfolio Performance layout: Place pie chart below portfolio value graph

--- a/activities/investment-odyssey/index.html
+++ b/activities/investment-odyssey/index.html
@@ -251,13 +251,17 @@
                         <h3>Portfolio Performance</h3>
                     </div>
                     <div class="card-body">
-                        <div class="row">
-                            <div class="col-md-8" style="height: 400px;">
+                        <div class="row mb-3">
+                            <div class="col-12" style="height: 300px;">
                                 <canvas id="portfolio-chart" width="400" height="200"></canvas>
                             </div>
-                            <div class="col-md-4" style="height: 400px;">
-                                <h5 class="text-center mb-3">Portfolio Allocation</h5>
-                                <canvas id="portfolio-allocation-chart" width="200" height="200"></canvas>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 text-center">
+                                <h5 class="mb-3">Portfolio Allocation</h5>
+                                <div style="height: 200px; max-width: 200px; margin: 0 auto;">
+                                    <canvas id="portfolio-allocation-chart" width="200" height="200"></canvas>
+                                </div>
                             </div>
                         </div>
                     </div>
