Fix TA authentication for Investment Odyssey class game

--- a/activities/investment-odyssey/ta-controls.html
+++ b/activities/investment-odyssey/ta-controls.html
@@ -246,6 +246,7 @@
                 <div>
                     <h5 class="mb-1">TA Authentication Required</h5>
                     <p class="mb-0">You need to be signed in as a TA to access the game controls. <a href="../../ta-admin.html" class="font-weight-bold">Sign in here</a>.</p>
+                    <p class="mt-2 mb-0"><small>Note: Your passcode is the first three letters of your name followed by "econ2" (e.g., "aksecon2" for Akshay).</small></p>
                 </div>
             </div>
         </div>
