--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -172,6 +172,7 @@
                             <a href="../../games.html" class="nav-link">Games</a>
                             <a href="index.html" class="nav-link">Play Game</a>
                             <a href="leaderboard.html" class="nav-link">Leaderboard</a>
+                            <a href="ta-controls.html" class="nav-link" id="ta-controls-link" style="display: none;">TA Controls</a>
                         </div>
                         <div class="nav-links-right">
                             <!-- User info (shown when logged in) -->
