Fix TA sign-in UI and authentication

--- a/games.html
+++ b/games.html
@@ -122,13 +122,13 @@
             <div class="row">
                 <div class="col-md-6 offset-md-3">
                     <div class="card">
-                        <div class="card-header bg-primary text-white">
+                        <div class="card-header bg-primary">
                             <ul class="nav nav-tabs card-header-tabs" id="auth-tabs" role="tablist">
                                 <li class="nav-item">
-                                    <a class="nav-link active text-white" id="student-tab" data-toggle="tab" href="#student-auth" role="tab" aria-controls="student-auth" aria-selected="true">Student</a>
+                                    <a class="nav-link active" id="student-tab" data-toggle="tab" href="#student-auth" role="tab" aria-controls="student-auth" aria-selected="true">Student</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white" id="ta-tab" data-toggle="tab" href="#ta-auth" role="tab" aria-controls="ta-auth" aria-selected="false">Teaching Assistant</a>
+                                    <a class="nav-link" id="ta-tab" data-toggle="tab" href="#ta-auth" role="tab" aria-controls="ta-auth" aria-selected="false">Teaching Assistant</a>
                                 </li>
                             </ul>
                         </div>
@@ -217,7 +217,6 @@
                                                 <div class="form-group">
                                                     <label for="ta-passcode">Passcode</label>
                                                     <input type="password" id="ta-passcode" class="form-control" placeholder="Enter your passcode">
-                                                    <small class="form-text text-muted">Your passcode is the first three letters of your name followed by "econ2" (e.g., "aksecon2" for Akshay)</small>
                                                 </div>
                                             </div>
                                         </div>
