Fix TA authentication UI and persistence issues

--- a/activities/investment-odyssey/ta-controls.html
+++ b/activities/investment-odyssey/ta-controls.html
@@ -245,8 +245,7 @@
                 </div>
                 <div>
                     <h5 class="mb-1">TA Authentication Required</h5>
-                    <p class="mb-0">You need to be signed in as a TA to access the game controls. <a href="../../ta-admin.html" class="font-weight-bold">Sign in here</a>.</p>
-                    <p class="mt-2 mb-0"><small>Note: Your passcode is the first three letters of your name followed by "econ2" (e.g., "aksecon2" for Akshay).</small></p>
+                    <p class="mb-0">You need to be signed in as a TA to access the game controls. <a href="../../games.html" class="font-weight-bold">Sign in here</a>.</p>
                 </div>
             </div>
         </div>
@@ -260,7 +259,7 @@
                         <h5 class="mb-1">Welcome, <span id="ta-name">TA Name</span>!</h5>
                         <p class="mb-0">You can manage class games for your sections below.</p>
                     </div>
-                    <a href="../../ta-admin.html" class="btn btn-outline-primary">Back to TA Dashboard</a>
+                    <a href="../../games.html" class="btn btn-outline-primary">Back to Games</a>
                 </div>
             </div>
 
@@ -421,6 +420,9 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
     <script src="js/supabase.js?v=4"></script>
     <script src="js/supabase-auth.js?v=4"></script>
+
+    <!-- Service Adapter -->
+    <script src="js/service-adapter.js?v=1"></script>
 
     <!-- TA Controls Script -->
     <script src="js/ta-controls.js?v=3"></script>
