--- a/games.html
+++ b/games.html
@@ -128,7 +128,7 @@
                                     <a class="nav-link active" id="student-tab" data-toggle="tab" href="#student-auth" role="tab" aria-controls="student-auth" aria-selected="true">Student</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" id="ta-tab" data-toggle="tab" href="#ta-auth" role="tab" aria-controls="ta-auth" aria-selected="false">Teaching Assistant</a>
+                                    <a class="nav-link text-white" id="ta-tab" data-toggle="tab" href="#ta-auth" role="tab" aria-controls="ta-auth" aria-selected="false">Teaching Assistant</a>
                                 </li>
                             </ul>
                         </div>
