--- a/games.html
+++ b/games.html
@@ -7,6 +7,21 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
     <style>
+        /* Custom styles for tab visibility */
+        .nav-tabs .nav-link {
+            color: white !important;
+            font-weight: bold !important;
+            opacity: 0.8;
+        }
+        .nav-tabs .nav-link.active {
+            color: #495057 !important;
+            background-color: #fff !important;
+            font-weight: bold !important;
+        }
+        .nav-tabs .nav-link:hover {
+            opacity: 1;
+        }
+
         .game-card {
             transition: transform 0.3s;
             margin-bottom: 20px;
@@ -125,10 +140,10 @@
                         <div class="card-header bg-primary">
                             <ul class="nav nav-tabs card-header-tabs" id="auth-tabs" role="tablist">
                                 <li class="nav-item">
-                                    <a class="nav-link active" id="student-tab" data-toggle="tab" href="#student-auth" role="tab" aria-controls="student-auth" aria-selected="true">Student</a>
+                                    <a class="nav-link active font-weight-bold" id="student-tab" data-toggle="tab" href="#student-auth" role="tab" aria-controls="student-auth" aria-selected="true">Student</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white" id="ta-tab" data-toggle="tab" href="#ta-auth" role="tab" aria-controls="ta-auth" aria-selected="false">Teaching Assistant</a>
+                                    <a class="nav-link text-white font-weight-bold" id="ta-tab" data-toggle="tab" href="#ta-auth" role="tab" aria-controls="ta-auth" aria-selected="false">Teaching Assistant</a>
                                 </li>
                             </ul>
                         </div>
