--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -677,6 +677,9 @@
     <script src="js/supabase-leaderboard.js?v=3"></script>
     <script src="js/supabase-scores.js?v=3"></script>
 
+    <!-- Service Adapter -->
+    <script src="js/service-adapter.js?v=2"></script>
+
     <!-- No longer using local storage scores -->
 
     <!-- Game Scripts -->
