--- a/games.html
+++ b/games.html
@@ -119,7 +119,7 @@
                     <a href="index.html">Home</a>
                     <a href="games.html" class="active">Games</a>
                     <a href="activities/index.html">Activities</a>
-                    <a href="materials.html">Materials</a>
+                    <a href="materials.html">Materials</a>0
                 </div>
                 <h1 class="banner-title">Economics Games</h1>
                 <p class="banner-subtitle">Interactive learning experiences for economics students</p>
