--- a/games.html
+++ b/games.html
@@ -283,11 +283,9 @@
     <script src="js/env.js"></script>
     <script src="js/supabase-init.js"></script>
 
-    <!-- Service Adapter -->
-    <script src="js/service-adapter.js"></script>
-
     <!-- Authentication Scripts -->
-    <script src="js/supabase-auth.js"></script>
+    <script src="activities/investment-odyssey/js/service-adapter.js"></script>
+    <script src="activities/investment-odyssey/js/supabase-auth.js"></script>
     <script src="js/ta-auth-service.js"></script>
     <script src="js/games.js"></script>
 
