--- a/ta-admin.html
+++ b/ta-admin.html
@@ -298,7 +298,8 @@
     <script src="js/supabase-init.js"></script>
 
     <!-- Service Adapter -->
-    <script src="js/service-adapter.js"></script>
+    <script src="activities/investment-odyssey/js/service-adapter.js"></script>
+    <script src="activities/investment-odyssey/js/supabase-auth.js"></script>
     <script src="js/ta-auth-service.js"></script>
     <script src="js/ta-admin.js"></script>
 
