--- a/activities/investment-odyssey/index.html
+++ b/activities/investment-odyssey/index.html
@@ -242,16 +242,16 @@
             </div>
         </div>
 
-        <!-- Portfolio Performance - Below Market Data -->
+        <!-- Portfolio Performance and Game Controls - Rebalanced Layout -->
         <div class="row mb-3 mt-3">
             <!-- Portfolio Performance - Full Width on Small Screens, Left Side on Large Screens -->
-            <div class="col-lg-5 mb-3 mb-lg-0">
+            <div class="col-lg-6 mb-3 mb-lg-0">
                 <div class="card card-equal-height">
                     <div class="card-header bg-warning text-white">
                         <h3>Portfolio Performance</h3>
                     </div>
                     <div class="card-body">
-                        <div class="row mb-3">
+                        <div class="row mb-4">
                             <div class="col-12" style="height: 300px;">
                                 <canvas id="portfolio-chart" width="400" height="200"></canvas>
                             </div>
@@ -259,8 +259,8 @@
                         <div class="row">
                             <div class="col-12 text-center">
                                 <h5 class="mb-3">Portfolio Allocation</h5>
-                                <div style="height: 250px; max-width: 250px; margin: 0 auto;">
-                                    <canvas id="portfolio-allocation-chart" width="250" height="250"></canvas>
+                                <div id="portfolio-allocation-chart-container" style="height: 300px; max-width: 300px; margin: 0 auto;">
+                                    <canvas id="portfolio-allocation-chart" width="300" height="300"></canvas>
                                 </div>
                             </div>
                         </div>
@@ -269,7 +269,7 @@
             </div>
 
             <!-- Game Controls & Trading - Right Side on Large Screens, Full Width on Small Screens -->
-            <div class="col-lg-7">
+            <div class="col-lg-6">
                 <div class="card card-equal-height">
                     <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
                         <h3 class="mb-0" style="font-size: 1.5rem;">Game Controls & Trading</h3>
@@ -501,11 +501,11 @@
                         <h3>Comparative Asset Performance</h3>
                     </div>
                     <div class="card-body">
-                        <div style="height: 400px; width: 100%; position: relative;">
+                        <div style="height: 450px; width: 100%; position: relative;">
                             <canvas id="comparative-returns-chart"></canvas>
                             <button id="reset-comparative-zoom" class="btn btn-sm btn-secondary" style="position: absolute; top: 10px; right: 10px;">Reset Zoom</button>
                         </div>
-                        <div class="mt-3 asset-toggle-container">
+                        <div class="mt-4 asset-toggle-container">
                             <div class="row">
                                 <div class="col-md-4">
                                     <div class="form-check mb-2">
