--- a/games.html
+++ b/games.html
@@ -264,6 +264,9 @@
                             <div class="mt-3">
                                 <a href="activities/investment-odyssey/about.html" class="btn btn-primary btn-lg">Play Investment Odyssey</a>
                             </div>
+                            <div class="mt-2">
+                                <a href="activities/investment-odyssey/class-game.html" class="btn btn-outline-success">Join Class Game</a>
+                            </div>
                         </div>
                     </div>
                 </div>
