--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -664,6 +664,8 @@
 
     <!-- Supabase Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
+    <script src="../../js/env.js"></script>
+    <script src="../../js/supabase-init.js"></script>
     <script src="js/supabase.js?v=5"></script>
     <script src="js/supabase-auth.js?v=5"></script>
 
