--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -670,6 +670,9 @@
     <!-- Header Authentication Script -->
     <script src="js/header-auth.js?v=5"></script>
 
+    <!-- TA Authentication Script -->
+    <script src="js/ta-auth.js?v=1"></script>
+
     <!-- Section Selector -->
     <script src="js/section-selector.js?v=3"></script>
 
