--- a/activities/investment-odyssey/ta-controls.html
+++ b/activities/investment-odyssey/ta-controls.html
@@ -285,16 +285,19 @@
 
     <!-- Supabase Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
-    <script src="js/supabase.js?v=5"></script>
+    <script src="js/supabase.js?v=6"></script>
     <script src="js/supabase-auth.js?v=5"></script>
 
     <!-- Service Adapter -->
-    <script src="js/service-adapter.js?v=1"></script>
+    <script src="js/service-adapter.js?v=3"></script>
+
+    <!-- TA Authentication Script -->
+    <script src="js/ta-auth.js?v=1"></script>
 
     <!-- Header Authentication Script -->
     <script src="js/header-auth.js?v=5"></script>
 
     <!-- TA Controls Script -->
-    <script src="js/ta-controls.js?v=1"></script>
+    <script src="js/ta-controls.js?v=2"></script>
 </body>
 </html>
