Remove day filter and add more debugging for game creation

--- a/activities/investment-odyssey/ta-controls.html
+++ b/activities/investment-odyssey/ta-controls.html
@@ -156,23 +156,10 @@
             <!-- Sections Filter -->
             <div class="filter-container mb-4">
                 <div class="row">
-                    <div class="col-md-6">
-                        <div class="form-group mb-0">
-                            <label for="day-filter"><i class="fas fa-calendar-day mr-1"></i> Filter by Day:</label>
-                            <select id="day-filter" class="form-control">
-                                <option value="all">All Days</option>
-                                <option value="M">Monday</option>
-                                <option value="T">Tuesday</option>
-                                <option value="W">Wednesday</option>
-                                <option value="R">Thursday</option>
-                                <option value="F">Friday</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
+                    <div class="col-12">
                         <div class="form-group mb-0">
                             <label for="search-filter"><i class="fas fa-search mr-1"></i> Search:</label>
-                            <input type="text" id="search-filter" class="form-control" placeholder="Search by time or location...">
+                            <input type="text" id="search-filter" class="form-control" placeholder="Search by day, time or location...">
                         </div>
                     </div>
                 </div>
