--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -664,31 +664,32 @@
 
     <!-- Supabase Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
-    <script src="js/supabase.js?v=6"></script>
-    <script src="js/supabase-auth.js?v=5"></script>
+    <script src="js/supabase.js?v=7"></script>
+    <script src="js/supabase-auth.js?v=6"></script>
 
     <!-- Header Authentication Script -->
-    <script src="js/header-auth.js?v=5"></script>
+    <script src="js/header-auth.js?v=6"></script>
 
     <!-- TA Authentication Script -->
-    <script src="js/ta-auth.js?v=1"></script>
+    <script src="js/ta-auth.js?v=2"></script>
 
     <!-- Section Selector -->
-    <script src="js/section-selector.js?v=3"></script>
+    <script src="js/section-selector.js?v=4"></script>
 
     <!-- Supabase Services -->
-    <script src="js/supabase-leaderboard.js?v=3"></script>
-    <script src="js/supabase-scores.js?v=3"></script>
+    <script src="js/supabase-leaderboard.js?v=4"></script>
+    <script src="js/supabase-scores.js?v=4"></script>
 
     <!-- Service Adapter -->
-    <script src="js/service-adapter.js?v=3"></script>
+    <script src="js/service-adapter.js?v=4"></script>
 
-    <!-- No longer using local storage scores -->
+    <!-- Database Adapter -->
+    <script src="js/db-adapter.js?v=1"></script>
 
     <!-- Game Scripts -->
-    <script src="js/game-core.js?v=13"></script>
-    <script src="js/game-ui.js?v=12"></script>
-    <script src="js/game-trading.js?v=12"></script>
-    <script src="js/class-game.js?v=5"></script>
+    <script src="js/game-core.js?v=14"></script>
+    <script src="js/game-ui.js?v=13"></script>
+    <script src="js/game-trading.js?v=13"></script>
+    <script src="js/class-game.js?v=6"></script>
 </body>
 </html>
