--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -265,8 +265,8 @@
                                         <span class="badge badge-info">Waiting for TA to advance rounds</span>
                                     </div>
                                 </div>
-                                <div id="cash-injection-alert" class="alert alert-info py-1 px-2 mt-2 mb-2" style="display: none;">
-                                    <strong>Cash Injection:</strong> $<span id="cash-injection-amount">0.00</span> has been added to your account.
+                                <div id="game-progress-alert" class="alert alert-info py-1 px-2 mt-2 mb-2" style="display: none;">
+                                    <strong>Game Progress:</strong> <span id="game-progress-message">Waiting for TA to start the game</span>
                                 </div>
                                 <div class="progress mt-2">
                                     <div id="round-progress" class="progress-bar bg-success" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
