--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -373,23 +373,18 @@
                                                     </div>
                                                 </div>
 
-                                                <!-- Trade Summary -->
+                                                <!-- Trade Execution -->
                                                 <div class="col-md-6">
                                                     <div class="card bg-light mb-2">
                                                         <div class="card-body p-2">
-                                                            <h6 class="card-title mb-2" style="font-size: 0.85rem;">Trade Summary</h6>
+                                                            <h6 class="card-title mb-2" style="font-size: 0.85rem;">Trade Information</h6>
                                                             <div class="d-flex justify-content-between mb-1">
-                                                                <span style="font-size: 0.85rem;">Quantity:</span>
-                                                                <span style="font-size: 0.85rem;" id="quantity-display">0.00</span>
-                                                            </div>
-                                                            <div class="d-flex justify-content-between mb-1">
-                                                                <span style="font-size: 0.85rem;">Total Cost:</span>
-                                                                <span style="font-size: 0.85rem;">$<span id="total-cost-display">0.00</span></span>
-                                                            </div>
-                                                            <div class="d-flex justify-content-between">
                                                                 <span style="font-size: 0.85rem;">Available Cash:</span>
                                                                 <span style="font-size: 0.85rem;">$<span id="available-cash-display">0.00</span></span>
                                                             </div>
+                                                            <!-- Hidden elements for compatibility -->
+                                                            <span id="quantity-display" style="display: none;">0.00</span>
+                                                            <span id="total-cost-display" style="display: none;">0.00</span>
                                                         </div>
                                                     </div>
                                                     <button type="submit" class="btn btn-primary btn-sm btn-block">Execute Trade</button>
@@ -608,7 +603,7 @@
                             </div>
                             <div class="card-body">
                                 <div style="height: 400px; width: 100%; position: relative;">
-                                    <canvas id="comparative-returns-chart"></canvas>
+                                    <canvas id="comparative-performance-chart"></canvas>
                                     <button id="reset-comparative-zoom" class="btn btn-sm btn-secondary" style="position: absolute; top: 10px; right: 10px;">Reset Zoom</button>
                                 </div>
                                 <div class="mt-3 asset-toggle-container">
