Fix Investment Odyssey UI issues: exclude cash from portfolio distribution, add reset zoom buttons, fix comparative asset performance chart

--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -542,8 +542,9 @@
                             </div>
                             <div class="card-body">
                                 <div class="row">
-                                    <div class="col-md-8" style="height: 400px;">
+                                    <div class="col-md-8" style="height: 400px; position: relative;">
                                         <canvas id="portfolio-chart" width="400" height="200"></canvas>
+                                        <button id="reset-portfolio-zoom" class="btn btn-sm btn-secondary" style="position: absolute; top: 10px; right: 10px;">Reset Zoom</button>
                                     </div>
                                     <div class="col-md-4" style="height: 400px;">
                                         <h5 class="text-center mb-3">Portfolio Allocation</h5>
