Fix ticker in Investment Odyssey: make it fixed at top of page in both class-game.html and index.html

--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -180,7 +180,7 @@
 
     </style>
 </head>
-<body class="bg-gray-50">
+<body class="bg-gray-50" style="padding-top: 50px;">
     <!-- Header -->
     <header>
         <div class="banner-container">
@@ -220,7 +220,7 @@
     </header>
 
     <!-- Asset Price Ticker (Always visible at the top) -->
-    <div class="ticker-container">
+    <div class="ticker-container" style="position: fixed; top: 0; left: 0; right: 0; z-index: 1000; border-bottom: 2px solid #007bff;">
         <div class="ticker-wrap">
             <div class="ticker" id="price-ticker">
                 <!-- Asset prices will be populated here dynamically -->
