--- a/activities/investment-odyssey/index.html
+++ b/activities/investment-odyssey/index.html
@@ -117,7 +117,7 @@
     <script src="https://cdn.jsdelivr.net/npm/hammerjs@2.0.8"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@1.2.1"></script>
 </head>
-<body class="bg-gray-50">
+<body class="bg-gray-50" style="padding-top: 50px;">
     <!-- Header -->
     <header>
         <div class="banner-container">
@@ -155,6 +155,15 @@
         </div>
     </header>
 
+    <!-- Asset Price Ticker (Always visible at the top) -->
+    <div class="ticker-container" style="position: fixed; top: 0; left: 0; right: 0; z-index: 1000; border-bottom: 2px solid #007bff;">
+        <div class="ticker-wrap">
+            <div class="ticker" id="price-ticker">
+                <!-- Asset prices will be populated here dynamically -->
+            </div>
+        </div>
+    </div>
+
     <div class="container-fluid-xl">
 
         <!-- Section Selection Status -->
@@ -169,18 +178,7 @@
             <!-- Current section will be displayed here by section-selector.js -->
         </div>
 
-        <!-- Asset Price Ticker -->
-        <div class="row mb-3">
-            <div class="col-12">
-                <div class="ticker-container">
-                    <div class="ticker-wrap">
-                        <div class="ticker" id="price-ticker">
-                            <!-- Asset prices will be populated here dynamically -->
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <!-- Asset Price Ticker moved outside the container to be fixed at the top -->
 
         <!-- Game Progress -->
         <div class="row mb-3">
