Update Investment Odyssey: show only total value in leaderboard, update return calculation with cash injections, remove redundant colored circles from comparative chart

--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -650,7 +650,7 @@
                                             <tr>
                                                 <th scope="col" width="10%">Rank</th>
                                                 <th scope="col" width="40%">Player</th>
-                                                <th scope="col" width="25%">Portfolio</th>
+                                                <th scope="col" width="25%">Total Value</th>
                                                 <th scope="col" width="25%">Return</th>
                                             </tr>
                                         </thead>
