--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -117,6 +117,12 @@
             color: white;
         }
 
+        .round-badge {
+            font-size: 1.2rem;
+            padding: 0.5rem 1rem;
+            border-radius: 20px;
+        }
+
         /* Ticker styles */
         .ticker-container {
             width: 100%;
@@ -648,10 +654,10 @@
                         <div class="card">
                             <div class="card-header bg-success text-white d-flex justify-content-between align-items-center">
                                 <h3>Class Leaderboard</h3>
-                                <span class="badge badge-light">Players: <span id="player-count">0</span></span>
+                                <span class="badge badge-light round-badge">Players: <span id="player-count">0</span></span>
                             </div>
                             <div class="card-body p-0">
-                                <div class="leaderboard-container" style="max-height: 300px; overflow-y: auto;">
+                                <div class="participant-table" style="max-height: 400px; overflow-y: auto;">
                                     <table class="table table-hover mb-0">
                                         <thead class="thead-light">
                                             <tr>
@@ -673,6 +679,9 @@
                                             </tr>
                                         </tbody>
                                     </table>
+                                </div>
+                                <div class="card-footer bg-light text-center p-2">
+                                    <small class="text-muted">Your position is highlighted in blue. Top performers are highlighted in gold, silver, and bronze.</small>
                                 </div>
                             </div>
                         </div>
