--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -123,6 +123,24 @@
             border-radius: 20px;
         }
 
+        /* Asset toggle styling */
+        .asset-toggle-container {
+            background-color: #f8f9fa;
+            border-radius: 8px;
+            padding: 15px;
+            margin-top: 20px;
+        }
+
+        .asset-toggle-container .form-check-label {
+            font-weight: 500;
+        }
+
+        .asset-toggle-container .form-check-input {
+            width: 18px;
+            height: 18px;
+            margin-top: 0.25rem;
+        }
+
         /* Ticker styles */
         .ticker-container {
             width: 100%;
@@ -611,7 +629,7 @@
                                 </div>
                                 <div class="mt-3 asset-toggle-container">
                                     <div class="row">
-                                        <div class="col-md-4">
+                                        <div class="col-md-3">
                                             <div class="form-check mb-2">
                                                 <input class="form-check-input" type="checkbox" id="show-sp500" checked>
                                                 <label class="form-check-label" for="show-sp500">S&P 500</label>
@@ -621,7 +639,7 @@
                                                 <label class="form-check-label" for="show-bonds">Bonds</label>
                                             </div>
                                         </div>
-                                        <div class="col-md-4">
+                                        <div class="col-md-3">
                                             <div class="form-check mb-2">
                                                 <input class="form-check-input" type="checkbox" id="show-real-estate" checked>
                                                 <label class="form-check-label" for="show-real-estate">Real Estate</label>
@@ -631,7 +649,7 @@
                                                 <label class="form-check-label" for="show-gold">Gold</label>
                                             </div>
                                         </div>
-                                        <div class="col-md-4">
+                                        <div class="col-md-3">
                                             <div class="form-check mb-2">
                                                 <input class="form-check-input" type="checkbox" id="show-commodities" checked>
                                                 <label class="form-check-label" for="show-commodities">Commodities</label>
@@ -639,6 +657,12 @@
                                             <div class="form-check mb-2">
                                                 <input class="form-check-input" type="checkbox" id="show-bitcoin" checked>
                                                 <label class="form-check-label" for="show-bitcoin">Bitcoin</label>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-3">
+                                            <div class="form-check mb-2">
+                                                <input class="form-check-input" type="checkbox" id="show-cpi" checked>
+                                                <label class="form-check-label" for="show-cpi">CPI</label>
                                             </div>
                                         </div>
                                     </div>
