--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -129,16 +129,24 @@
             border-radius: 8px;
             padding: 15px;
             margin-top: 20px;
+            border: 1px solid #e9ecef;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.05);
         }
 
         .asset-toggle-container .form-check-label {
             font-weight: 500;
+            padding-left: 5px;
         }
 
         .asset-toggle-container .form-check-input {
-            width: 18px;
-            height: 18px;
-            margin-top: 0.25rem;
+            width: 20px;
+            height: 20px;
+            margin-top: 0.2rem;
+            cursor: pointer;
+        }
+
+        .asset-toggle-container .form-check {
+            margin-bottom: 10px !important;
         }
 
         /* Ticker styles */
@@ -621,15 +629,15 @@
                                 <h3>Comparative Asset Performance</h3>
                             </div>
                             <div class="card-body">
-                                <div style="height: 400px; width: 100%; position: relative;">
-                                    <div class="d-flex justify-content-end mb-2">
-                                        <button id="reset-comparative-zoom" class="btn btn-sm btn-secondary">Reset Zoom</button>
-                                    </div>
+                                <div class="d-flex justify-content-end mb-2">
+                                    <button id="reset-comparative-zoom" class="btn btn-sm btn-secondary">Reset Zoom</button>
+                                </div>
+                                <div style="height: 450px; width: 100%; position: relative;">
                                     <canvas id="comparative-performance-chart"></canvas>
                                 </div>
-                                <div class="mt-3 asset-toggle-container">
+                                <div class="mt-4 asset-toggle-container">
                                     <div class="row">
-                                        <div class="col-md-3">
+                                        <div class="col-md-3 col-6">
                                             <div class="form-check mb-2">
                                                 <input class="form-check-input" type="checkbox" id="show-sp500" checked>
                                                 <label class="form-check-label" for="show-sp500">S&P 500</label>
@@ -639,7 +647,7 @@
                                                 <label class="form-check-label" for="show-bonds">Bonds</label>
                                             </div>
                                         </div>
-                                        <div class="col-md-3">
+                                        <div class="col-md-3 col-6">
                                             <div class="form-check mb-2">
                                                 <input class="form-check-input" type="checkbox" id="show-real-estate" checked>
                                                 <label class="form-check-label" for="show-real-estate">Real Estate</label>
@@ -649,7 +657,7 @@
                                                 <label class="form-check-label" for="show-gold">Gold</label>
                                             </div>
                                         </div>
-                                        <div class="col-md-3">
+                                        <div class="col-md-3 col-6">
                                             <div class="form-check mb-2">
                                                 <input class="form-check-input" type="checkbox" id="show-commodities" checked>
                                                 <label class="form-check-label" for="show-commodities">Commodities</label>
@@ -659,7 +667,7 @@
                                                 <label class="form-check-label" for="show-bitcoin">Bitcoin</label>
                                             </div>
                                         </div>
-                                        <div class="col-md-3">
+                                        <div class="col-md-3 col-6">
                                             <div class="form-check mb-2">
                                                 <input class="form-check-input" type="checkbox" id="show-cpi" checked>
                                                 <label class="form-check-label" for="show-cpi">CPI</label>
