Add global return calculation fix to ensure consistent formula across all pages

--- a/activities/investment-odyssey/leaderboard.html
+++ b/activities/investment-odyssey/leaderboard.html
@@ -429,6 +429,9 @@
     <script src="js/supabase-leaderboard.js?v=3"></script>
     <script src="js/supabase-scores.js?v=3"></script>
 
+    <!-- Return Calculation Fix -->
+    <script src="js/return-calculation-fix.js?v=1"></script>
+
     <!-- No longer using local storage scores -->
 
     <!-- Name Change Modal -->
