--- a/activities/investment-odyssey/ta-controls.html
+++ b/activities/investment-odyssey/ta-controls.html
@@ -276,6 +276,9 @@
     <!-- Service Adapter -->
     <script src="js/service-adapter.js?v=3"></script>
 
+    <!-- Return Calculation Fix -->
+    <script src="js/return-calculation-fix.js?v=1"></script>
+
     <!-- TA Authentication Script -->
     <script src="js/ta-auth.js?v=1"></script>
 
