--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -14,8 +14,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <!-- Chart.js and Chart.js Zoom plugin -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@1.2.1/dist/chartjs-plugin-zoom.min.js"></script>
 
     <style>
         /* Sticky Next Round Button */
@@ -760,9 +760,6 @@
 
     <!-- DB Fix for Cash Injections -->
     <script src="js/db-fix-cash-injections.js?v=1"></script>
-
-    <!-- Return Calculation Fix -->
-    <script src="js/return-calculation-fix.js?v=1"></script>
 
     <!-- Game Scripts -->
     <script src="js/game-core.js?v=14"></script>
