--- a/activities/investment-odyssey/leaderboard.html
+++ b/activities/investment-odyssey/leaderboard.html
@@ -418,8 +418,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
 
     <!-- Supabase Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
-    <script src="js/supabase.js?v=5"></script>
+    <script src="https://unpkg.com/@supabase/supabase-js@2.38.4"></script>
+    <script src="js/supabase.js?v=8"></script>
     <script src="js/supabase-auth.js?v=5"></script>
 
     <!-- Header Authentication Script -->
@@ -428,9 +428,6 @@
     <!-- Supabase Services -->
     <script src="js/supabase-leaderboard.js?v=3"></script>
     <script src="js/supabase-scores.js?v=3"></script>
-
-    <!-- Return Calculation Fix -->
-    <script src="js/return-calculation-fix.js?v=1"></script>
 
     <!-- No longer using local storage scores -->
 
