--- a/activities/investment-odyssey/ta-controls.html
+++ b/activities/investment-odyssey/ta-controls.html
@@ -269,15 +269,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
 
     <!-- Supabase Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
-    <script src="js/supabase.js?v=6"></script>
+    <script src="https://unpkg.com/@supabase/supabase-js@2.38.4"></script>
+    <script src="js/supabase.js?v=8"></script>
     <script src="js/supabase-auth.js?v=5"></script>
 
     <!-- Service Adapter -->
     <script src="js/service-adapter.js?v=3"></script>
-
-    <!-- Return Calculation Fix -->
-    <script src="js/return-calculation-fix.js?v=1"></script>
 
     <!-- TA Authentication Script -->
     <script src="js/ta-auth.js?v=1"></script>
